--- a/templates/page.html
+++ b/templates/page.html
@@ -1,50 +1,48 @@
-<%
-from werkzeug.exceptions import NotFound
-entries = registry.find_all(values)
+%(
 if not entries:
   raise NotFound()
 entry = entries[0]
-%>
+)
 
-<h1>${entry["title"]}</h1>
+<h1>%entry["title"]</h1>
 
-${read(entry).html()|n}
+%read(entry).html()
 
-<%
+%(
 pages = [
   page
-  for page in registry.find_all({"type": "page"})
+  for page in registry.select({"type": "page"})
   if entry["slug"] in page.get("tags", [])]
-%>
-% if pages:
+)
+%if pages:
 <hr/>
-<h4>Pages tagged with "${entry["title"]}"</h4>
+<h4>Pages tagged with "%entry["title"]"</h4>
 <ul>
-%   for page in pages:
-<li><a href="${urls.build('page', {'slug': page['slug']})}">${page["title"]}</a></li>
-%   endfor
+%for page in pages:
+<li><a href="%urls.build('page', {'slug': page['slug']})">%page["title"]</a></li>
+%end
 </ul>
-% endif
+%end
 
-<%
+%(
 tags = [
   tag
-  for tag in registry.find_all({"type": "page"})
+  for tag in registry.select({"type": "page"})
   if tag.get("slug", None) in entry["tags"]]
 tag_slugs = [tag["slug"] for tag in tags]
-%>
+)
 
-% if entry["tags"]:
+%if entry["tags"]:
 <hr />
 <p>
-%   for tag in tags:
-<span><a href="${urls.build('page', {'slug': tag['slug']})}">${tag["title"]}</a></span>
-%   endfor
-%   for tag in entry["tags"]:
-%     if tag not in tag_slugs:
-<span>${tag}</span>
-<% warn("%s: tag %r not found" % (filename, tag)) %>
-%     endif
-%   endfor
+%for tag in tags:
+<span><a href="%urls.build('page', {'slug': tag['slug']})">%tag["title"]</a></span>
+%end
+%for tag in entry["tags"]:
+%if tag not in tag_slugs:
+<span>%tag</span>
+%( warn(f"{entry.filename}: tag {tag!r} not found") )
+%end
+%end
 </p>
-% endif
+%end
