--- a/templates/page.html
+++ b/templates/page.html
@@ -1,48 +1,10 @@
-%(
-if not entries:
-  raise NotFound()
-entry = entries[0]
-)
+%extends("templates/base.html")
+%require(entry)
 
-<h1>%entry["title"]</h1>
+%def title():
+%entry["title"]
+%end
 
+%def content():
 %entry.content
-
-%(
-pages = [
-  page
-  for page in db.select({"type": "page"})
-  if entry["slug"] in page.get("tags", [])]
-)
-%if pages:
-<hr/>
-<h4>Pages tagged with "%entry["title"]"</h4>
-<ul>
-%for page in pages:
-<li><a href="%urls.build('page', {'slug': page['slug']})">%page["title"]</a></li>
-%end
-</ul>
-%end
-
-%(
-tags = [
-  tag
-  for tag in db.select({"type": "page"})
-  if tag.get("slug", None) in entry["tags"]]
-tag_slugs = [tag["slug"] for tag in tags]
-)
-
-%if entry["tags"]:
-<hr />
-<p>
-%for tag in tags:
-<span><a href="%urls.build('page', {'slug': tag['slug']})">%tag["title"]</a></span>
-%end
-%for tag in entry["tags"]:
-%if tag not in tag_slugs:
-<span>%tag</span>
-%( warn(f"{entry.filename}: tag {tag!r} not found") )
-%end
-%end
-</p>
 %end
