--- a/templates/page.html
+++ b/templates/page.html
@@ -1,10 +1,10 @@
-%extends("templates/base.html")
-%require(entry)
+$extends("templates/base.html")
+$require(entry)
 
-%def title():
-%entry["title"]
-%end
+$def title():
+$entry["title"]
+$end
 
-%def content():
-%entry.content
-%end
+$def content():
+$entry.content
+$end
